# unity_mesh_nav

./: README-zh.md  README.md  code_structure.md  debug.md  system_real_robot.sh  system_real_robot_with_exploration_planner.sh  system_real_robot_with_route_planner.sh  system_real_robot_with_tare_planner.sh  system_simulation.sh  system_simulation_with_exploration_planner.sh  system_simulation_with_route_planner.sh  system_simulation_with_tare_planner.sh  tare_toreal_debug.md
src/: debug.md
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/terrain_analysis/: CMakeLists.txt
src/base_autonomy/terrain_analysis/include/terrain_analysis/: cloud_interpolation.hpp
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: cloud_interpolation.cpp  terrainAnalysis.cpp
src/base_autonomy/vehicle_simulator/launch/: system_real_robot.launch  system_real_robot_only_slam.launch.py  system_real_robot_with_exploration_planner.launch  system_real_robot_with_route_planner.launch  system_real_robot_with_tare_planner.launch  system_simulation.launch  system_simulation_with_exploration_planner.launch  system_simulation_with_tare_planner.launch  vehicle_simulator.launch
src/base_autonomy/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/base_autonomy/waypoint_example/launch/: waypoint_example.launch
src/base_autonomy/waypoint_example/src/: waypointExample.cpp
src/exploration_planner/tare_planner/config/: indoor.yaml  indoor_20250304.yaml  indoor_work.yaml  outdoor.yaml
src/exploration_planner/tare_planner/include/lidar_model/: lidar_model.h
src/exploration_planner/tare_planner/include/planning_env/: planning_env.h
src/exploration_planner/tare_planner/include/pointcloud_manager/: pointcloud_manager.h
src/exploration_planner/tare_planner/include/viewpoint_manager/: viewpoint_manager.h
src/exploration_planner/tare_planner/launch/: explore_world.launch
src/exploration_planner/tare_planner/rviz/: tare_planner_ground.rviz
src/exploration_planner/tare_planner/src/grid_world/: grid_world.cpp
src/exploration_planner/tare_planner/src/local_coverage_planner/: local_coverage_planner.cpp
src/exploration_planner/tare_planner/src/planning_env/: planning_env.cpp
src/exploration_planner/tare_planner/src/pointcloud_manager/: pointcloud_manager.cpp
src/exploration_planner/tare_planner/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
src/exploration_planner/tare_planner/src/tsp_solver/: tsp_solver.cpp
src/exploration_planner/tare_planner/src/utils/: misc_utils.cpp
src/exploration_planner/tare_planner/src/viewpoint_manager/: viewpoint_manager.cpp
src/route_planner/far_planner/: CMakeLists.txt
src/route_planner/far_planner/config/: default.yaml
src/route_planner/far_planner/rviz/: default.rviz
src/route_planner/far_planner/src/: far_planner.cpp
src/slam/point_lio_unilidar/: CMakeLists.txt
src/slam/point_lio_unilidar/PCD/: .404025df6691a1d0982ac77966a3901c94611e2.cam  .82e313c08a791c996cff792ad79a17c84bad4780.cam  .d186082a8699c69536f5b7d9c686fa9bb67b5b41.cam  floor_test_1.pcd  scans.pcd  scans_20250428_152248.pcd  scans_20250428_152854.pcd  scans_20250428_154811.pcd  scans_20250428_155224.pcd  scans_20250429_154656.pcd  scans_20250429_154747.pcd  scans_20250429_155103.pcd  scans_20250429_155158.pcd  scans_20250429_155255.pcd  scans_20250429_155431.pcd  scans_20250430_151451.pcd  scans_20250430_151616.pcd  scans_20250430_152315.pcd  scans_20250430_152511.pcd  scans_20250430_153008.pcd  scans_20250430_153142.pcd  scans_20250430_153301.pcd  scans_20250430_153357.pcd  scans_20250430_153415.pcd  scans_20250430_153456.pcd  scans_20250430_153637.pcd
src/slam/point_lio_unilidar/config/: utlidar.yaml
src/slam/point_lio_unilidar/launch/: mapping_utlidar.launch
src/slam/point_lio_unilidar/src/: laserMapping.cpp
src/tare_planner/: CMakeLists.txt
src/tare_planner/config/: indoor.yaml  matterport.yaml
src/tare_planner/launch/: explore.launch  explore_indoor_real.launch
src/tare_planner/rviz/: tare_planner_ground.rviz
src/tare_planner/src/grid_world/: grid_world.cpp
src/tare_planner/src/local_coverage_planner/: local_coverage_planner.cpp
src/utilities/calibrate_imu/: CMakeLists.txt  package.xml
src/utilities/calibrate_imu/src/: calibrate_go2_imu.cpp  calibrate_go2_imu_on_pc2.cpp  calibrate_imu.cpp
src/utilities/transform_sensors/: setup.py
src/utilities/transform_sensors/transform_sensors/: sensor_fusion.py  transform_everything.py  transform_hesai.py  transform_hesai_on_pc2.py  transform_hesai_process.py
src/utilities/unitree_pkgs/go2_h264_repub/src/: go2_h264_repub.cpp
src/utilities/waypoint_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/utilities/waypoint_rviz_plugin/include/: waypoint_tool_3d.hpp
src/utilities/waypoint_rviz_plugin/src/: waypoint_tool.cpp  waypoint_tool_3d.cpp
